# biome-demo

./: Cargo.toml  a.txt
crates/oxc_position/: Cargo.toml
crates/oxc_position/src/: main.rs
crates/oxc_span/: Cargo.toml
crates/oxc_span/src/: main.rs
crates/petgraph_deps/: Cargo.toml
crates/petgraph_deps/src/: main.rs
crates/petgraph_detect_cycle/: Cargo.toml
crates/petgraph_detect_cycle/src/: main.rs
src/: arrow_functions.rs  common.rs  default_destructured_params.rs  main.rs  oxc.rs  petgraph.rs  petgraph1.rs
