[package]
name = "biome-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[[bin]]
name = "biome-demo"
path = "src/oxc.rs"

[dependencies]
biome_js_parser = "0.5.7"
biome_js_syntax = "0.5.7"
biome_js_semantic = "0.5.7"
biome_rowan = "0.5.7"
oxc_semantic = "0.25.0"
oxc_allocator = "0.25.0"  
oxc_parser = "0.25.0"
oxc_ast = "0.25.0"
oxc_sourcemap = "0.25.0"
oxc_span = "0.25.0"
semver = "1.0.23"
tower-lsp = "0.20.0"
ropey = "1.0.0"
# biome_js_parser = { git = "https://github.com/biomejs/biome", branch = "main"}
# biome_js_syntax = { git = "https://github.com/biomejs/biome", branch = "main" }
# biome_js_semantic = { git = "https://github.com/biomejs/biome", branch = "main" }
# biome_rowan = { git = "https://github.com/biomejs/biome", branch = "main" } 